# Trainings

./: .gitignore  CMakeLists.txt  Readme.md  build_debug.bat  build_release.bat  downloadVCPKG.bat  format_all_files.bat  generate_project_files.bat  installPackages.bat  test.bat
.github/workflows/: windows-build.yml
A_star_algorithm/: A_star.cpp  A_star.h  main.cpp
Algorithms/AStar/: A_star.cpp  A_star.h  CMakeLists.txt  main.cpp  profile.h
Algorithms/Contraction/: CMakeLists.txt  Contraction.cpp  Contraction.h  Query.txt  Test2.txt  main.cpp
Algorithms/DisJointSet/: CMakeLists.txt
Algos/AStar/: A_star.cpp  A_star.h  main.cpp  profile.h  test_runner.h
Algos/A_star_algorithm/: A_star.h  CMakeLists.txt
Algos/Contraction/: Contraction.cpp  Contraction.h  Test5.txt  main.cpp
Algos/DisJointSet/: disjointset.h  main.cpp
Automation/: automation.py  build.bat  build_debug.bat  build_release.bat  clean.bat  downloadVCPKG.bat  format_all_files.bat  generate_project_files.bat  installPackages.bat  test.bat
Contraction/: CMakeLists.txt  Contraction.cpp  Contraction.h  Query.txt  Readme.txt  Test2.txt  Test3.txt  Test4.txt  Test5.txt  Test6.txt  main.cpp
CppFeatures/: CMakeLists.txt  pressure_cast_sample.cpp
CppFeatures/BitWiseOperations/: main.cpp
CppFeatures/NonTrvialOperatorOverload/: CMakeLists.txt  main.cpp
CppFeatures/OperatorOverload/: CMakeLists.txt
CppFeatures/Preprocessor/: CMakeLists.txt  main.cpp
CppFeatures/Range/: CMakeLists.txt  range.cpp
CppFeatures/Split/: CMakeLists.txt  split.cpp
CppFeatures/Vectors/: NaiveVector.h  RawMemVector.cpp  RawMemVector.h  main.cpp
ParaPython/: CMakeLists.txt  comparators.cpp  lexer.h  lexer_test.cpp  main.cpp  object.cpp  object.h  object_holder.cpp  object_holder.h  object_test.cpp  parse_test.cpp  statement.cpp  statement.h  statement_test.cpp  test_runner.h
Source/Algorithms/: CMakeLists.txt
Source/Algorithms/Contraction/: Contraction.cpp  Contraction.h  Test6.txt  main.cpp
Source/Algorithms/DisJointSet/: CMakeLists.txt
Source/Algorithms/RBTREE/: RBTREE.cpp  RBTREE.h  main.cpp
Source/CppFeatures/: CMakeLists.txt
Source/CppFeatures/Preprocessor/: main.cpp
Source/CppFeatures/Vectors/: CMakeLists.txt
Source/ParaPython/: CMakeLists.txt  comparators.h  main.cpp  object_holder.h  object_holder_test.cpp  statement.cpp
scripts/: GenerateProject.bat  automation.py  clean.bat  generate_project_files.bat  installPackages.bat
src/Algorithms/Contraction/: Readme.md  Test3.txt  Test4.txt
src/Algorithms/DisJointSet/: main.cpp
src/Algorithms/RBTREE/: CMakeLists.txt  RBTREE.cpp  RBTREE.h  main.cpp
src/CppFeatures/: CMakeLists.txt
src/CppFeatures/Preprocessor/: main.cpp
src/CppFeatures/Reflection/: CMakeLists.txt  main.cpp
src/CppFeatures/Vectors/: RawMemVector.h  main.cpp
src/ParaPython/: comparators.cpp  lexer.cpp  object.h  parse.cpp  parse_test.cpp
